--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                   <div class="flex items-center justify-between">
                       <a href="#" class="text-sm font-medium text-primary-600 text-white" routerLink="/forgot">Forgot password?</a>
                   </div>
-                  <button type="submit" class="w-full text-white bg-purple-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center" [disabled]="login.invalid">Login</button>
+                  <button type="submit" class="w-full text-white bg-purple-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center" [disabled]="login.invalid" routerLink="/booklist">Login</button>
                   <p class="text-sm font-light text-white">
                       New User? <br><a href="#" class="block mb-2 text-sm font-medium text-cyan-200" routerLink="/register">Click here to register</a>
                   </p>
