--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                   </div>
                   <div>
                       <label for="password" class="block mb-2 text-sm font-medium text-white">ENTER YOUR PASSWORD</label>
-                      <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" ngModel #password="ngModel" required>
+                      <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" ngModel #password="ngModel"  minlength="6" maxlength="20"  required>
                       <p *ngIf="password.invalid && password.touched" class="text-red-500">Please enter Valid password</p>
                   </div>
                   <div class="flex items-center justify-between">
