--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -26,7 +26,7 @@
                       <p *ngIf="password.invalid && password.touched" class="text-red-500">Please provide a valid password</p>
                   </div>
 
-                  <button type="submit" class="w-full text-white bg-purple-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center" [disabled]="register.invalid">Register</button>
+                  <button type="submit" class="w-full text-white bg-purple-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center" [disabled]="register.invalid" routerLink="/login">Register</button>
                   <p class="text-sm font-light text-white">
                       Existing User? <br><a href="#" class="block mb-2 text-sm font-medium text-cyan-200" routerLink="/login" >Click here to Login</a>
                   </p>
